ChangeLog

Upcoming version
[DOCS]     Fix link to ke_search_hooks repository and extend documentation about custom indexers. Thanks to Luka C. https://github.com/tpwd/ke_search/issues/122
[DOCS]     Add sortdate to the routing example

Version 4.5.0, September 2022
[!!!]      This version changes the database structure and ads an additional fulltext index. Please do a full indexing after upgrading.
[FEATURE]  Index custom file references in page indexer. Thanks to Patrick Crausaz. https://github.com/tpwd/ke_search/pull/119
[FEATURE]  Index custom fields in tt_content. https://github.com/tpwd/ke_search/issues/102
[FEATURE]  Add column "hidden_content" in the index table which is used for searching but is not displayed in the result list, add ModifyFieldValuesBeforeStoringEvent for adding content to that column.
[BUGFIX]   Give dependencies when instantiating Db object and activate autoconfigure and auto-wiring for Db. https://github.com/tpwd/ke_search/issues/78
[BUGFIX]   Fix link to non-FAL-files in result list. https://github.com/tpwd/ke_search/issues/118
[TASK]     Remove unnecessary removing of replacement character, see https://github.com/tpwd/ke_search/commit/af9f166f241728916a726ae453a676997a0f3b7d#r76324249
[TASK]     Add MatchColumnsEvent, remove the dependency in the Db class, inject the EventDispatcher
[DOCS]     Add information about using conjunctions with partial word search. https://github.com/tpwd/ke_search/issues/121

Version 4.4.5, June 2022
[BUGFIX]  Remove unicode replacement character in PDF indexing. Thanks to Kamel Ben Yedder. https://github.com/tpwd/ke_search/pull/114
[BUGFIX]  Fix regression from version 4.4.2 which caused the search result to be empty when the search box is on a different page. https://github.com/tpwd/ke_search/issues/113

Version 4.4.4, June 2022
[TASK]    Go back to fetch() from fetchAssociative() for backwards compatibility

Version 4.4.3, June 2022
[BUGFIX]  Fix undefined array key issue